add some style to component Product and add also working with mongo db at the server side

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Welcome to the news</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
     <link href="/assets/style.css" rel="stylesheet">
   </head>
   <body>
